Preventing jumpy behavior of #knowmore

--- a/css/mid.css
+++ b/css/mid.css
@@ -104,7 +104,7 @@
 
 @media screen and (max-width: 500px){
     .text-appear{
-      margin-top: 10vh;
+      margin-top: 10%;
     }
     #skills{
       margin-top: 20%;
